# ToSorabh

./: README.md
Lib/HLAPI/Include/: SPInterface.h
Lib/HLAPI/Lib/: HLAPI.lib
Lib/LLAPI/Include/: LLAPIExport.h
Lib/LLAPI/Lib/: LLAPI.lib
Lib/PahoMQTT/Lib/: libpaho-mqtt3as.so.1.0  paho-mqtt3as.lib
Source_Code/TelemetryClient/: .gitattributes  .gitignore  CMakeLists.txt  README.md  config.cmake
Source_Code/TelemetryClient/Bluetooth-PeopleCounter/: Bluetooth.pro  CMakeLists.txt  blscanner_global.h  bluetooth.cpp  bluetooth.h  bluetoothhandler.cpp  bluetoothhandler.h  dataobject.cpp  dataobject.h
Source_Code/TelemetryClient/Bluetooth-PeopleCounter/TestApp/: BlscannerTest.pro  main.cpp
Source_Code/TelemetryClient/ConfigurationReader/: CMakeLists.txt  ConfigurationReader.cpp  ConfigurationReader.h
Source_Code/TelemetryClient/ConfigurationReader/ConfigFiles/: CreateFetchEventAndSP.txt  DEXConfiguration.xml  TelemetryConfiguration.xml  TelemetryConfiguration.xsd
Source_Code/TelemetryClient/DexProcessingUnit/: CMakeLists.txt  DexConverter.cpp  DexConverter.h
Source_Code/TelemetryClient/Docs/: Doxyfile  mainpage.dox
Source_Code/TelemetryClient/PIR-PeopleCounter/: CMakeLists.txt  pir.cpp  pir.h
Source_Code/TelemetryClient/PIR-PeopleCounter/TestApp/: CMakeLists.txt  test_pir.cpp
Source_Code/TelemetryClient/RealSense-PeopleCounter/: BeamCounter.cpp  BeamCounter.h  CMakeLists.txt  ReadMe.txt  RealSensePeopleCounter.cpp  RealSensePeopleCounter.h  Stdafx.cpp  projection.cpp  projection.h
Source_Code/TelemetryClient/RealSense-PeopleCounter/TestApp/: ReadMe.txt  RealsenseTestApps.cpp  RealsenseTestApps.vcxproj  RealsenseTestApps.vcxproj.filters  stdafx.cpp
Source_Code/TelemetryClient/SensorTelemetryController/: CMakeLists.txt  SensorTelemetryController.cpp  SensorTelemetryController.h  TimerLibrary.cpp  TimerLibrary.h
Source_Code/TelemetryClient/Telemetry/: CMakeLists.txt  DBHandler.cpp  DBHandler.h  DataTransmissionController.cpp  DataTransmissionController.h  IDEX.cpp  IDEX.h  IMessageHandler.h  MessageHandler.cpp  MessageHandler.h  MessageQueue.cpp  MessageQueue.h  PublishTableController.cpp  PublishTableController.h  TimerLibrary_DTC.cpp  TimerLibrary_DTC.h  Transaction.cpp  Transaction.h  datatranslator.cpp  datatranslator.h
Source_Code/TelemetryClient/TimerLib/: CMakeLists.txt  timer_lib.c  timer_lib.h
Source_Code/TelemetryClient/UnitTests/: CMakeLists.txt
Source_Code/TelemetryClient/UnitTests/include/: common_ut.h
Source_Code/TelemetryClient/UnitTests/src/: common_ut.cpp
Source_Code/TelemetryClient/UnitTests/src/ConfigurationReader_UT/: CMakeLists.txt  ConfigurationReader.cpp  ConfigurationReader.h  ConfigurationReader_UT.cpp
Source_Code/TelemetryClient/UnitTests/src/DEX_Converter_UT/: CMakeLists.txt  DEX_Converter_UT.cpp
Source_Code/TelemetryClient/UnitTests/src/DataTransmissionController_UT/: CMakeLists.txt  DataTransmissionController.cpp  DataTransmissionController.h  DataTransmissionController_UT.cpp  bluetooth.h  bluetoothhandler.cpp  bluetoothhandler.h
Source_Code/TelemetryClient/UnitTests/src/Datatranslator_UT/: CMakeLists.txt  PublishTableController_mock.cpp  PublishTableController_mock.h  datatranslator_UT.cpp
Source_Code/TelemetryClient/UnitTests/src/IDEX_UT/: CMakeLists.txt  IDEX_UT.cpp
Source_Code/TelemetryClient/UnitTests/src/MessageHandler_UT/: CMakeLists.txt  MessageHandler_UT.cpp
Source_Code/TelemetryClient/UnitTests/src/PIR_UT/: CMakeLists.txt  pir_ut.cpp
Source_Code/TelemetryClient/UnitTests/src/PublishTableController_UT/: CMakeLists.txt  Publishtable_UT.cpp  Transaction_mock.cpp  Transaction_mock.h
Source_Code/TelemetryClient/UnitTests/src/SensorTelemetryController_UT/: CMakeLists.txt  SensorTelemetryController_UT.cpp
Source_Code/TelemetryClient/UnitTests/src/Transaction_UT/: CMakeLists.txt  Datatranslator_mock.cpp  Transaction_UT.cpp
Source_Code/TelemetryClient/UnitTests/src/WiFiPeopleCounter-UT/: CMakeLists.txt  Makefile  wifi_ut.cpp
Source_Code/TelemetryClient/UnitTests/src/ble_ut/: CMakeLists.txt  ble_ut.cpp
Source_Code/TelemetryClient/WiFi-PeopleCounter/: CMakeLists.txt
Source_Code/TelemetryClient/WiFi-PeopleCounter/app/: appmain.c
Source_Code/TelemetryClient/WiFi-PeopleCounter/include/: wifi_ppl_counter.h  wifilib.h
Source_Code/TelemetryClient/WiFi-PeopleCounter/libs/: CMakeLists.txt
Source_Code/TelemetryClient/WiFi-PeopleCounter/libs/channel_selector/: CMakeLists.txt
Source_Code/TelemetryClient/WiFi-PeopleCounter/libs/channel_selector/include/: channel_selector.h  channel_selector_ut.h
Source_Code/TelemetryClient/WiFi-PeopleCounter/libs/channel_selector/src/: channel_selector.c
Source_Code/TelemetryClient/WiFi-PeopleCounter/libs/config_lib/: CMakeLists.txt
Source_Code/TelemetryClient/WiFi-PeopleCounter/libs/config_lib/include/: configlib.h
Source_Code/TelemetryClient/WiFi-PeopleCounter/libs/config_lib/src/: configlib.cpp
Source_Code/TelemetryClient/WiFi-PeopleCounter/libs/db-connector/: CMakeLists.txt  dbconnector.cpp  dbconnector.h
Source_Code/TelemetryClient/WiFi-PeopleCounter/libs/hashtable/: CMakeLists.txt
Source_Code/TelemetryClient/WiFi-PeopleCounter/libs/hashtable/include/: hashmap.h  hashmaplib.h
Source_Code/TelemetryClient/WiFi-PeopleCounter/libs/hashtable/src/: hashmap.c  hashmaplib.c
Source_Code/TelemetryClient/WiFi-PeopleCounter/libs/pkt_capture/: CMakeLists.txt
Source_Code/TelemetryClient/WiFi-PeopleCounter/libs/pkt_capture/include/: pcap_user.h
Source_Code/TelemetryClient/WiFi-PeopleCounter/libs/pkt_capture/src/: pcap_user.c
Source_Code/TelemetryClient/WiFi-PeopleCounter/libs/pkt_parser/: CMakeLists.txt
Source_Code/TelemetryClient/WiFi-PeopleCounter/libs/pkt_parser/include/: pktparser.h
Source_Code/TelemetryClient/WiFi-PeopleCounter/libs/pkt_parser/src/: pktparser.c
Source_Code/TelemetryClient/WiFi-PeopleCounter/libs/radiotap/: CMakeLists.txt  Makefile
Source_Code/TelemetryClient/WiFi-PeopleCounter/src/: CMakeLists.txt  wifi_ppl_counter.c
xml/: SPM_DeviceConfiguration.xml  SPM_MachineConfiguration.xml  SPM_Schema.xsd
